# AtelierLabs

./: LICENSE  README.md
agents/: README.md
agents/autonomy_gatekeeper/: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
agents/autonomy_gatekeeper/src/autonomy_gatekeeper/: __init__.py  app.py  cli.py  config.py  graph.py  schemas.py
agents/autonomy_gatekeeper/src/autonomy_gatekeeper/llm/: factory.py  prompts.py
agents/autonomy_gatekeeper/src/autonomy_gatekeeper/policy/: rules.yaml
agents/autonomy_gatekeeper/src/autonomy_gatekeeper/tools/: registry.py
agents/autonomy_gatekeeper/src/autonomy_gatekeeper/utils/: logging.py
agents/autonomy_gatekeeper/tests/: test_graph_routing.py  test_policy_rules.py
knowledge/: README.md
notes/: README.md
orchestration/: README.md
tools/: README.md
